Archive2/4e/ccf1c812ff1579/output
main.cpp:4:34: error: constexpr variable 'test' must be initialized by a constant expression
    static constexpr const void* test = reinterpret_cast<const void*>(0x1);
                                 ^      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
main.cpp:4:41: note: reinterpret_cast is not allowed in a constant expression
    static constexpr const void* test = reinterpret_cast<const void*>(0x1);
                                        ^
1 error generated.
