Archive2/4e/ccf1c812ff1579/main.cpp
class C
{
  public:
    static constexpr const void* test = reinterpret_cast<const void*>(0x1);
};

int main() {
        return 0;
}
